infras/k8s/category-manifests/category-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: category-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      imagePullSecrets:
          - name: authenticate-registry
      hostAliases:
        - ip: "192.168.73.101"
          hostnames:
          - "gitlab.taskscheduler.com"
      containers:
        - name: category
          image: longle2003/category:latest
---

apiVersion: v1
kind: Service
metadata:
  name: category-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: category
  ports:
    - name: category
      protocol: TCP
      port: 4004
      targetPort: 4004
